--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-[Ll]ibrary/
-[Tt]emp/
-[Oo]bj/
-[Bb]uild/
-[Bb]uilds/
-Assets/AssetStoreTools*
+**/[Ll]ibrary/
+**/[Mm]ono/
+**/[Tt]emp/
+**/[Oo]bj/
+**/[Bb]uild/
+**/[Bb]uilds/
+**/[Pp]rojectSettings/
+**/Assets/*/
+
+# Ignore everything except script code and text files, not sure how /*/ is working above
+!**/Assets/Scripts/
+!**/Assets/Strings/
 
 # Visual Studio cache directory
 .vs/
@@ -24,9 +30,12 @@ ExportedObj/
 *.pdb
 *.opendb
 
-# Unity3D generated meta files
+# Unity2D generated meta files
 *.pidb.meta
 *.pdb.meta
+*.meta
+*manifest.json
+*.unity
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
@@ -34,3 +43,7 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+*.exe
+
+# Libraries
+*.dll
