First successful local lan; client server; global online photon bolt auth. server WORKING

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ sysinfo.txt
 # Libraries
 *.dll
 /SwordClash/Seth Le Podeu/CodeGraphData
+/SwordClash/Seth Le PodeuPreBOLT.zip
+/SwordClash/Seth Le Podeu/Assets/nanoMP.png
